# Cpp_ComputePipeline_Challenge

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile.in
pipeline/: Pipeline.cpp  Resource.cpp
pipeline/actions/: ActionInterface.hpp  CMakeLists.txt
pipeline/actions/load/: CMakeLists.txt  LoadAction.cpp
pipeline/actions/load/loaders/: AppBundleLoad.cpp  AppBundleLoad.hpp  URLLoad.cpp  URLLoad.hpp
pipeline/actions/process/: CMakeLists.txt
pipeline/actions/process/processors/: ImageDecoderProcess.cpp  ImageDecoderProcess.hpp  JSONDeserializerProcess.cpp  JSONDeserializerProcess.hpp  ProcessorBase.cpp
src/: CMakeLists.txt  main.cpp
src/pipeline/: CMakeLists.txt  Pipeline.hpp  Resource.hpp
src/pipeline/actions/load/: LoadAction.hpp
src/pipeline/actions/load/loaders/: FileLoad.cpp  FileLoad.hpp  LoaderBase.cpp  LoaderBase.hpp
src/pipeline/actions/process/: ProcessAction.cpp  ProcessAction.hpp
src/pipeline/actions/process/processors/: DataDecompressorProcess.cpp  DataDecompressorProcess.hpp  ProcessorBase.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  it_Pipeline.cpp
tests/unit/loaders/: CMakeLists.txt  ut_LoadAction.cpp
